--- a/views/offers_property_views.xml
+++ b/views/offers_property_views.xml
@@ -8,6 +8,8 @@
                     <field name="price"/>
                     <field name="partner_id"/>
                     <field name="status"/>
+                    <field name="validity_days"/>
+                    <field name="date_deadline"/>
                 </tree>
             </field>
     </record>
