--- a/views/offers_property_views.xml
+++ b/views/offers_property_views.xml
@@ -7,6 +7,8 @@
                 <tree string="Tests">
                     <field name="price"/>
                     <field name="partner_id"/>
+                    <button name="action_confirm" string="Confirm" type="object" icon="fa-check"/>
+                    <button name="action_refuse" string="Refuse" type="object" icon="fa-times"/>
                     <field name="status"/>
                     <field name="validity_days"/>
                     <field name="date_deadline"/>
