--- a/views/type_property_views.xml
+++ b/views/type_property_views.xml
@@ -11,6 +11,7 @@
         <field name="model">type_model</field>
         <field name="arch" type="xml">
             <tree string="Tests">
+                <field name="sequence" widget="handle"/>
                 <field name="name"/>
             </tree>
         </field>
