--- a/views/data_property_views.xml
+++ b/views/data_property_views.xml
@@ -10,12 +10,16 @@
         <field name="name">test_model.tree</field>
         <field name="model">test_model</field>
         <field name="arch" type="xml">
-            <tree string="Tests">
+            <tree decoration-success="best_offer != 0" decoration-muted="state == 'sold'">
                 <field name="name"/>
+                <field name="entrie_type_id" widget="mayn2one" options="{'no_create_edit': True}"/>
                 <field name="postcode"/>
-                <field name="selling_price"/>
+                <field name="entrie_tag_ids" widget="many2many_tags" options="{'color_field':'color'}"/>
                 <field name="simple_integer"/>
-                <field name="date_availability"/>
+                <field name="selling_price"/>
+                <field name="best_offer"/>
+                <field name="date_availability" optional="hide"/>
+                <field name="state" invisible="1"/>
             </tree>
         </field>
     </record>
@@ -46,7 +50,7 @@
                             <field name="selling_price"/>
                             <field name="best_offer"/>
                             <field name="date_availability"/>
-                            <field name="total_computation"/>
+                            <field name="total_computation" filter_domain="[('total_computation', '>=', self)]"/>
                         </group>
                         <newline></newline>
                         <notebook>
@@ -91,6 +95,7 @@
                 <group expand="2" string="Group By">
                     <filter string="By postcode" name="Postal code" context="{'group_by':'postcode'}"/>
                     <filter string="By check box" name="Check Box" domain="[('check_box', '=', True)]"/>
+                    <filter string="Is active" name="Active" domain="[('active', '=', True)]"/>
                 </group>
             </search>
         </field>
