Adding CRUD override
Adding the override for the unlink and create for adding business logic.

--- a/views/type_property_views.xml
+++ b/views/type_property_views.xml
@@ -10,7 +10,8 @@
         <field name="name">type_model.tree</field>
         <field name="model">type_model</field>
         <field name="arch" type="xml">
-            <tree editable="bottom">
+            <!--<tree editable="bottom">-->
+            <tree string="test">
                 <field name="sequence" widget="handle"/>
                 <field name="name"/>
             </tree>
