--- a/views/data_property_views.xml
+++ b/views/data_property_views.xml
@@ -70,7 +70,8 @@
                                 </group>
                             </page>
                             <page string="Offers">
-                                <field name="offers_ids" attrs="{'readonly':[('best_offer', '!=', 0), '|', ('state', '=', 'sold'), '|', ('state', '=', 'canceled')]}"/>
+                                <!--<field name="offers_ids" attrs="{'readonly':[('best_offer', '!=', 0), '|', ('state', '=', 'sold'), '|', ('state', '=', 'canceled')]}"/>-->
+                                <field name="offers_ids"/>
                             </page>
                             <page string="Other Info">
                                 <group>
