--- a/views/inherited_property_views.xml
+++ b/views/inherited_property_views.xml
@@ -9,9 +9,9 @@
     <record id="res_users_form" model="ir.ui.view">
         <field name="name">res.users.view.form.inherit</field>
         <field name="model">res.users</field>
-        <field name="inherit_id" ref="base.view_users_form"/>
+        <field name="inherit_id" ref="base.view_users_simple_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='name']" position="inside">
+            <xpath expr="//field[@name='mobile']" position="after">
                 <notebook>
                     <page string="Real estate Properties">
                         <field name="property_ids"/>
